Fix critical ordering bug: inbound relay frames must be dispatched FIFO, not on a concurrent virtual-thread pool -- batched poll responses could otherwise interleave/reorder streamed text and tool-call argument chunks
Co-authored-by: Cursor <cursoragent@cursor.com>